Fixed #143 - Replaced ListUtils.unmodifiableList(..) with List.copyOf(..)